<resources>
    <string name="app_name">GPACalc</string>

    <string name="login">Login</string>
    <string name="uName">Index No</string>
    <string name="pword">Password</string>
    <string name="app_name_part_1">GPA</string>
    <string name="app_name_part_2">Calc</string>
    <string name="hint_index_no">Index No</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="button_reister">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="total_gpa">Total GPA</string>
    <string name="total_credit">Total Credit</string>
    <string name="title_semester">Semester</string>
    <string name="title_sgpa">SGPA</string>
    <string name="title_credit">Credit</string>
    <string name="action_date">Date</string>
    <string name="semester_gpa">Semester GPA</string>
    <string name="subject_code">Code</string>
    <string name="subject_name">Subject Name</string>
    <string name="Result">Result</string>
    <string name="credit">Credit</string>
    <string name="semester_no">Semester No</string>
    <string name="subject_credit">Credit</string>
    <string name="subject_result">Result</string>

    <string name="result_prompt">Choose a country</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="copyright">copyright statement</string>
    <string name="version">1.1.0</string>
    <string name="forgot_password">Forgot password</string>
    <string name="action_chart">Chart</string>
    <string name="inline_preferences">Inline Preferences</string>
    <string name="title_checkbox_preference">Checkbox Preference</string>
    <string name="summary_checkbox_preference">Summary</string>
    <string name="dialog_based_preferences">Dialog Based Preferences</string>
    <string name="title_edittext_preference">Edittext Preferences</string>
    <string name="summary_edittext_preference">Summary</string>
    <string name="dialog_title_edittext_preference">Dialog Title</string>
    <string name="title_list_preference">List Preferences</string>
    <string name="summary_list_preference">Summary</string>
    <string name="dialog_title_list_preference">Dialog Title</string>
    <string name="launch_preferences">Laounch Preferences</string>
    <string name="title_screen_preference">Screen Preferences</string>
    <string name="summary_screen_preference">Summary</string>
    <string name="title_next_screen_toggle_preference">Next Screen Toggle</string>
    <string name="summary_next_screen_toggle_preference">Next Screen</string>
    <string name="title_intent_preference">Intent Preferences</string>
    <string name="summary_intent_preference">Intent Preferences</string>
    <string name="preference_attributes">Preferences Attributes</string>
    <string name="title_parent_preference">Parent Preferences</string>
    <string name="summary_parent_preference">Summary Parent</string>
    <string name="title_child_preference">Chiled Prefernces</string>
    <string name="summary_child_preference">Summary Child</string>
    <array name="result_arrays">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D-</item>
        <item>I</item>
        <item>F</item>
    </array>
</resources>
