<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.android.roshan.gpacalc.ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp">
        <EditText
            android:id="@+id/input_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/ic_action_account_card_details"
            android:hint="@string/hint_index_no"
            android:inputType="text"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/input_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/ic_action_perm_identity"
            android:hint="@string/hint_full_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/ic_action_lock_outline"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:id="@+id/btn_register"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_reister"/>
    </LinearLayout>
</RelativeLayout>
